[DSPlayer] Added pixel shaders resizers
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/dsplayer@29005 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -2433,6 +2433,14 @@
 							>
 						</File>
 						<File
+							RelativePath="..\..\xbmc\cores\DSPlayer\Filters\PixelShaderCompiler.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\xbmc\cores\DSPlayer\Filters\PixelShaderCompiler.h"
+							>
+						</File>
+						<File
 							RelativePath="..\..\xbmc\cores\DSPlayer\Filters\RendererSettings.cpp"
 							>
 						</File>
