Update .gitignore to ignore autogenerated files from llqtwebkit.
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/llqtwebkit-browser@29008 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/.gitignore
+++ b/.gitignore
@@ -733,6 +733,11 @@ config.log
 /lib/libmodplug/src/Makefile
 /lib/libmodplug/src/config.h
 
+# /lib/libqtwebkit/
+/lib/llqtwebkit/.moc/
+/lib/llqtwebkit/.ui/
+/lib/llqtwebkit/Makefile
+
 /system/python/Lib/
 
 /tools/EventClients/Clients/OSXRemote/Makefile
