--- a/configure.in
+++ b/configure.in
@@ -689,8 +689,7 @@ if test "$host_vendor" = "apple" ; then
   AC_MSG_NOTICE($vaapi_disabled)
 else
   if test "$use_vaapi" = "yes"; then
-    AC_CHECK_HEADER([va/va.h],AC_DEFINE([HAVE_LIBVA], [], [Define to 1 if you have the 'vaapi' library (-lva).]),
-      use_vaapi=no;AC_MSG_RESULT($vaapi_not_found))
+    AC_CHECK_LIB([va], main,, use_vaapi=no;AC_MSG_RESULT($vaapi_not_found))
   else
     AC_MSG_NOTICE($vaapi_disabled)
   fi
