added: New VDR VNSI-Server plugin 0.0.1 (Temporary here until branch is merged to trunk) added: New VDR VNSI-Client addon for XBMC changed: Build VNSI client during global make
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@29120 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/Makefile.in
+++ b/Makefile.in
@@ -119,6 +119,7 @@ endif
 
 PVR_DIRS=\
 	xbmc/pvrclients/vdr-streamdev \
+	xbmc/pvrclients/vdr-vnsi \
 	xbmc/pvrclients/tvheadend
 
 LIBADDON_DIRS=\
@@ -329,6 +330,7 @@ endif
 endif
 pvrclients: exports
 	$(MAKE) -C xbmc/pvrclients/vdr-streamdev
+	$(MAKE) -C xbmc/pvrclients/vdr-vnsi
 	$(MAKE) -C xbmc/pvrclients/tvheadend
 screensavers: exports
 	$(MAKE) -C xbmc/screensavers/rsxs-0.9/xbmc
