fixed: Forgot to disable console debug output inside VNSI server
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@29121 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/pvrclients/vdr-vnsi/vdr-plugin-vnsiserver/Makefile
+++ b/xbmc/pvrclients/vdr-vnsi/vdr-plugin-vnsiserver/Makefile
@@ -4,7 +4,7 @@
 # $Id$
 
 # Allow console debug messages
-CONSOLEDEBUG = 1
+#CONSOLEDEBUG = 1
 
 # The official name of this plugin.
 # This name will be used in the '-P...' option of VDR to load the plugin.
