Ticket #8661: xbmc-python-module-no-as-needed.patch
Add -Wl,--no-as-needed to the link line of python wrapper module. We use linking flag -Wl,--as-needed by default to avoid unneeded library dependencies. However, the python xbmc module does not use libpython even if it links against it, causing --as-needed to drop it, and thus xbmc can't resolve python symbols through the module. Therefore this patch explicitely disables it.

git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@29152 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/lib/libPython/linux/Makefile.in
+++ b/xbmc/lib/libPython/linux/Makefile.in
@@ -96,7 +96,7 @@ $(SLIB): $(WRAPPER) $(WRAPPERDEF) $(PYWRAP) $(PYWRAPDEF) ../Python/libpython2.4.
 		../../../cores/DllLoader/exports/wrapper.o
 else
 $(SLIB): $(WRAPPER) $(WRAPPERDEF) $(PYWRAP) $(PYWRAPDEF)
-	$(CC) -shared -o $@ -l$(PYVERSION) \
+	$(CC) -shared -o $@ -Wl,--no-as-needed -l$(PYVERSION) \
 		`cat wrapper_python.def` wrapper_python.o \
 		`cat ../../../cores/DllLoader/exports/wrapper.def` \
 		../../../cores/DllLoader/exports/wrapper.o
