--- a/xbmc/cores/DSPlayer/Subtitles/subpic/subpic.vcproj
+++ b/xbmc/cores/DSPlayer/Subtitles/subpic/subpic.vcproj
@@ -171,7 +171,10 @@
 				AdditionalIncludeDirectories="..\..\..\..\;..\..\..\..\..\guilib;..\..\..\..\win32;..\..\include;..\..\baseclasses;..\..\..\..\lib\boost;..\..\DshowUtil/;..\..\"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;"
 				RuntimeLibrary="0"
+				BufferSecurityCheck="true"
+				EnableEnhancedInstructionSet="1"
 				UsePrecompiledHeader="2"
+				DebugInformationFormat="0"
 				DisableSpecificWarnings="4244"
 			/>
 			<Tool
