--- a/xbmc/cores/DSPlayer/Subtitles/subtitles/libssf/libssf.vcproj
+++ b/xbmc/cores/DSPlayer/Subtitles/subtitles/libssf/libssf.vcproj
@@ -172,7 +172,10 @@
 				AdditionalIncludeDirectories="..\..\..\..\..\;..\..\..\..\..\..\guilib;..\..\..\..\..\win32;..\..\include;..\..\..\baseclasses;..\..\..\..\..\lib\boost;..\..\..\"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				RuntimeLibrary="0"
+				BufferSecurityCheck="true"
+				EnableEnhancedInstructionSet="1"
 				UsePrecompiledHeader="2"
+				DebugInformationFormat="0"
 				DisableSpecificWarnings="4244"
 			/>
 			<Tool
