[DSPlayer] fixed: subtitles don't disappear anymore (also fix build errors)
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/dsplayer@29186 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -2633,7 +2633,7 @@
 					Name="Interfaces"
 					>
 					<File
-						RelativePath="..\..\xbmc\cores\DSPlayer\Subtitles\DllLibmpcSubs.h"
+						RelativePath="..\..\xbmc\cores\DSPlayer\Subtitles\DllLibSubs.h"
 						>
 					</File>
 					<File
